# DuDoanSanPhamBanChayTrongTuongLai

./: .env  .gitignore  README.md  docker-compose.yaml  pyproject.toml  smarthome_db (1).sql  smarthome_db (2).sql  smarthome_db.sql
app/: db.py  logging.py  main.py  model.pkl  models.py
app/api/: health.py  model.pkl
app/core/: get_data.py
app/data/: base_dataset.csv  model-test.pkl  model.pkl
app/features/predict/: controller.py  model_logic.py  repo.py  route.py  schemas.py  service.py
app/features/schedule_training/: handler.py  job.py  model.py  repo.py  scheduler.py  train.py
dataset/: clean_data.ipynb  dataset.csv  dataset_cleaned.csv  dataset_train.csv  get_dataset.ipynb
